add handlings logic for training project